# myshortly

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: cache.py  config.py  database.py  main.py
app/models/: url.py
app/routers/: redirect.py  shorten.py  stats.py
app/schemas/: url.py
app/services/: analytics.py  rate_limiter.py  shortener.py
tests/: conftest.py  test_redirect.py  test_shorten.py  test_stats.py
